Fix typo and add figure css

--- a/style.css
+++ b/style.css
@@ -107,6 +107,21 @@ p.tags  {background: url(images/icon_tag.png) 0 5px no-repeat;padding-left: 24px
 p.rss {background: url(images/feed.png) 0 0 no-repeat;padding-left: 24px;}
 a.commentlink {background: url(images/icon_comment.png) 0 0 no-repeat;padding-left: 24px; }
 .news img, .news iframe, .news video {padding: 4px;background: #fff;box-shadow: 0 1px 2px rgba(0,0,0,.2);border: solid 1px #bbb;max-width: 100%;}
+.news figure {
+	display:table;
+	float: right;
+	margin-left: 5px;
+	margin-right: 5px;
+	text-align: center;
+	background: #f6f6f6;
+	border: 1px solid rgba(0, 0, 0, 0.05);
+	border-radius:5px;
+		-webkit-box-shadow:  inset 0 1px 1px rgba(0, 0, 0, 0.05); 
+		-moz-box-shadow:  inset 0 1px 1px rgba(0, 0, 0, 0.05); 
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+	*zoom: 1;
+}
+.news figcaption {color: #333;}
 /* COMMENT BLOCS
 -------------------------------------------------------- */
 .comment {margin-bottom: 20px;padding-top: 25px;}
